--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "method-override": "^3.0.0",
-    "mysql2": "^3.14.1",
+    "mongoose": "^8.16.4",
     "pug": "^3.0.3"
   }
 }
